2010-01-05  Nick Gasson  <nick@nickg.me.uk>

	* xcowsay 1.2 released!

	* src/cowsayd.c (cowsay_dream): New DBus method to implement
	uk.me.doof.Cowsay.Dream
	* src/xcowsay.c (main): Make dream path absolute for daemon and
	check file exists before going further.

2010-01-04  Nick Gasson  <nick@nickg.me.uk>

	* src/xcowsay.c (main): Add --bubble-at option to change
	relative location of speech bubble.
	* src/display_cow.c (display_cow): Use bubble_x and bubble_y
	config variables to alter relative location of bubble.

	* src/config_file.c (parse_config_file): Allow the config file
	to be placed in $XDG_CONFIG_HOME/xcowsayrc as well as
	$HOME/.xcowsayrc.

	* src/xcowsay.c (main): Add --config option to specify and
	additional config file to parse.
	* src/config_file.c (config_file_name): Support parsing the
	additional config file.

	* src/config_file.c (next_token): Fix parsing config files where
	there is no whitespace between tokens.

	* src/bubblegen.c (make_text_bubble): Don't print a warning when
	we can't parse Pango attributes.  This may arise from valid
	input e.g. '1 < 0'.

	* src/xcowsayd.c (cow_display_thread, wait_for_request)
	(enqueue_request): Store the cow mode in request objects inside
	the daemon.
	(cowsay_think): New DBus method to implement
	uk.me.doof.Cowsay.Think

2010-01-03  Nick Gasson  <nick@nickg.me.uk>

	* src/xcowsay.c (main): Add --at option to specify cow location
	on screen and correspoding at_x and at_y config variables.
	(parse_position_option): New function to parse options specified
	as X,Y pairs.
	* src/display_cow.c (display_cow): Now recognises the at_x and
	at_y config variables to force cow to appear at a particular
	position.

2010-01-02  Nick Gasson  <nick@nickg.me.uk>

	* src/display_cow.c (display_cow): Fix splicing of cow across
	multiple monitors.  Now picks a random monitor and then a random
	location within that monitor.
	* src/xcowsay.c (main): Add --monitor option to specify a