@@ -80,6 +80,9 @@ Display the cow for
 .I time
 seconds. This overrides any value set for
 .IR reading_speed .
+Setting
+.I time
+to zero displays the cow until it is clicked.
 The corresponding config file option is
 .IR display_time .
 .TP
